[package]
name = "linefeed"
version = "0.1.0"
edition = "2021"

[features]
default = []
aoc-secret = []

[dependencies]
ariadne = "0.3.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git", branch = "main" }
regex = "1.11.1"
yansi = "1.0.1"

[dev-dependencies]
indoc = "2.0.5"
strip-ansi-escapes = "0.2.0"
