[package]
name = "linefeed"
version = "0.1.0"
edition = "2021"

[features]
default = []
aoc-secret = []
debug-vm = []
profile-vm = ["strum"]

[dependencies]
strum = { version = "0.27", features = ["derive"], optional = true }
ariadne = "0.3.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git", rev = "282bf5e", features = ["memoization"] }
ouroboros = "0.18.5"
regex = "1.11.1"
rug = "1.27.0"
rustc-hash = "2.1.1"
yansi = "1.0.1"

[dev-dependencies]
indoc = "2.0.5"
strip-ansi-escapes = "0.2.0"
